--- a/config/template.yaml
+++ b/config/template.yaml
@@ -17,7 +17,7 @@ mv_apply_step: 0
 use_different_t: True
 use_lr_scheduler: False
 phi_v_prediction: False # FIXME v_prediction is still buggy 
-enable_memory_efficient_attention: True
+enable_memory_efficient_attention: False # Default: True
 enable_vae_slicing: True
 enable_half_precision: False
 add_background: False
