Remove wandb.watch()

--- a/config/template.yaml
+++ b/config/template.yaml
@@ -141,3 +141,5 @@ scene_config_path: ${scene_dir}/${scene_id}/meshes/scene_config.json
 sphere_cameras: ${scene_dir}/${scene_id}/cameras/sphere.yaml
 blenderproc_cameras: ${scene_dir}/${scene_id}/cameras/blenderproc.json
 blender_cameras: ${scene_dir}/${scene_id}/cameras/blender.json
+
+# wandb
