Add use_wandb option on template.yaml

--- a/config/template.yaml
+++ b/config/template.yaml
@@ -143,3 +143,4 @@ blenderproc_cameras: ${scene_dir}/${scene_id}/cameras/blenderproc.json
 blender_cameras: ${scene_dir}/${scene_id}/cameras/blender.json
 
 # wandb
+use_wandb: False
