--- a/config/template.yaml
+++ b/config/template.yaml
@@ -35,7 +35,7 @@ show_visible_texels: False
 show_rgb_gt: False
 
 phi_type: lora # lora / simple_unet
-loss_type: vsd # vsd / sds / l2
+loss_type: sds # vsd / sds / l2
 diffusion_type: d2i # t2i / d2i / d2i_controlnet
 generation_mode: vsd # t2i / vsd 
 t_schedule: anneal # random / t_stages2 / anneal -> need to set num_anneal_steps
@@ -143,4 +143,4 @@ blenderproc_cameras: ${scene_dir}/${scene_id}/cameras/blenderproc.json
 blender_cameras: ${scene_dir}/${scene_id}/cameras/blender.json
 
 # wandb
-use_wandb: False
+use_wandb: True
