--- a/config/template.yaml
+++ b/config/template.yaml
@@ -83,8 +83,8 @@ use_random_cameras: True # False -> sample cameras in order, True -> sample came
 use_latent_embeddings: False
 
 # studio
-texture_type: hashgrid # latent / rgb / hashgrid / hashgrid_mlp DEFAULT> hashgrid
-render_func_type: mlp # mlp / none
+texture_type: rgb # latent / rgb / hashgrid / hashgrid_mlp DEFAULT: hashgrid
+render_func_type: none # mlp / none DEFAULT: mlp
 
 add_view_directions: False
 add_target_positions: True
@@ -143,7 +143,7 @@ blenderproc_cameras: ${scene_dir}/${scene_id}/cameras/blenderproc.json
 blender_cameras: ${scene_dir}/${scene_id}/cameras/blender.json
 
 # wandb
-use_wandb: True
+use_wandb: False
 
 #rgb2x
 cache_dir: models/rgb2x_cache
