--- a/config/template.yaml
+++ b/config/template.yaml
@@ -1,6 +1,7 @@
 # VSD guidance
 guidance_scale: 200.0
 guidance_scale_phi: 1.0
+image_guidance_scale: 10.0
 phi_scale: 1.0
 grad_scale: 1.0
 latent_lr: 1e-3
