--- a/config/template.yaml
+++ b/config/template.yaml
@@ -15,7 +15,7 @@ rgb_scale: 0
 mv_scale: 0
 mv_apply_step: 0
 
-texture_init: zero # zero, random
+texture_init: zeros # zeros, random
 use_different_t: True
 use_lr_scheduler: False
 phi_v_prediction: False # FIXME v_prediction is still buggy 
