--- a/config/kitchen_hq_config.yaml
+++ b/config/kitchen_hq_config.yaml
@@ -147,7 +147,7 @@ scene_mesh_path: ${scene_dir}/scene.obj
 frequency_texture_path: ${scene_dir}/train/frequency/frequency_texture.png
 
 # wandb
-use_wandb: False
+use_wandb: True
 wandb_log_steps: 100
 wandb_log_hyperparameters: True
 wandb_log_conditioning_image: True
