--- a/config/bedroom_hq_config.yaml
+++ b/config/bedroom_hq_config.yaml
@@ -4,7 +4,7 @@ guidance_scale_phi: 1.0
 image_guidance_scale: 1.0
 phi_scale: 1.0
 grad_scale: 1.0
-latent_lr: 1e-3
+latent_lr: 1e-2
 latent_wd: 0
 phi_lr: 1e-4
 latent_encoder_lr: 3e-2
@@ -15,6 +15,7 @@ rgb_scale: 0
 mv_scale: 0
 mv_apply_step: 0
 
+use_noise_mesh: True
 texture_init: origin # origin / random; init with origin: on roughness means init with 1, on metallic with -1 and on other aovs with 0 in -1, 1 normalized space
 use_different_t: True
 use_lr_scheduler: False
@@ -41,7 +42,7 @@ show_rgb_gt: False
 phi_type: lora # lora / simple_unet
 loss_type: sds # vsd / sds / l2
 loss_space: image # image / latent
-loss_keep_prob: 0.7
+loss_keep_prob: 1
 diffusion_type: d2i # t2i / d2i / d2i_controlnet
 generation_mode: vsd # t2i / vsd 
 t_schedule: random  # random / t_stages2 / anneal -> need to set num_anneal_steps
@@ -53,8 +54,8 @@ latent_channels: 3 # DO NOT CHANGE unless you know what you're doing!!!
 render_channels: 3 # DO NOT CHANGE unless you know what you're doing!!!
 render_size: 512 # DO NOT CHANGE unless you know what you're doing!!!     # used to set rendered image size
 decode_size: 512 # DO NOT CHANGE unless you know what you're doing!!!     # used only for logging
-latent_texture_size: 2048 # optimization target size                      
-latent_background_size: 2048 # optimization target size
+latent_texture_size: 4096 # optimization target size                      
+latent_background_size: 4096 # optimization target size
 decode_texture_size: 128
 texture_size: 4096 # determined by VAE - should be decode_texture_size x8
 faces_per_pixel: 1
@@ -78,8 +79,8 @@ batch_size: 1
 verbose_mode: False
 
 # cameras
-camera_type: scannet # scannet / kitchen_hq / sphere / blenderproc / blender
-use_random_cameras: False # False -> sample cameras in order, True -> sample cameras randomly
+camera_type: kitchen_hq # scannet / kitchen_hq / sphere / blenderproc / blender
+use_random_cameras: True # False -> sample cameras in order, True -> sample cameras randomly
 
 # camera direction
 use_latent_embeddings: False
@@ -131,29 +132,30 @@ dummy_texture_path: samples/textures/dummy.png
 label_path: samples/scene/label.png
 background: samples/primitives/cube.obj
 
-log_dir: "outputs/scannet"
+log_dir: "outputs/bedroom_hq"
 
 prompt: "a bohemian style living room"
 a_prompt: best quality, high quality, extremely detailed, good geometry, high-res photo
 n_prompt: "" #TODO can we have n_prompt for albedo? #deformed, extra digit, fewer digits, cropped, worst quality, low quality, smoke, shading, lighting, lumination, shadow, text in image, watermarks
 
-scene_dir: data/scannet
+scene_dir: data/bedroom_hq
 scene_id: "93f59740-4b65-4e8b-8a0f-6420b339469d/room_4"
 scene_config_path: ${scene_dir}/${scene_id}/meshes/scene_config.json
 sphere_cameras: ${scene_dir}/cameras/sphere.yaml
 blenderproc_cameras: ${scene_dir}/${scene_id}/cameras/blenderproc.json
 blender_cameras: ${scene_dir}/cameras/blender.json
-custom_cameras: ${scene_dir}/psdf/transforms_all.json
-scene_mesh_path: ${scene_dir}/psdf/mesh/textured/mesh.obj
-#frequency_texture_path: ${scene_dir}/train/frequency/frequency_texture.png TODO: add frequency texture generation into pipeline
+custom_cameras: ${scene_dir}/train/transforms.json
+scene_mesh_path: ${scene_dir}/scene.obj
+frequency_texture_path: ${scene_dir}/train/frequency/frequency_texture.png
 
 # wandb
 use_wandb: True
+wandb_run_name: bedroom
 wandb_log_steps: 100
 wandb_log_hyperparameters: True
 wandb_log_conditioning_image: True
 wandb_log_denoised_latents: True
-wandb_log_pred_original_sample: True
+wandb_log_pred_original_sample: False
 wandb_log_noisy_latents: False
 wandb_log_not_encoded_latents: False
 wandb_log_texture: True
@@ -162,5 +164,5 @@ wandb_log_texture: True
 cache_dir: models/rgb2x_cache
 
 #conditioning image
-conditioning_image_format: jpg # jpg / png / exr (with exr tone-mapping may be off)
-conditioning_images_path: ${scene_dir}/psdf
+conditioning_image_format: png # png / exr (with exr tone-mapping may be off)
+conditioning_images_path: ${scene_dir}
